--- a/index.html
+++ b/index.html
@@ -1,280 +1,218 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MindCoach</title>
-
   <style>
-    :root{
-      --bg1:#f7fbff;
-      --bg2:#e9f0ff;
-      --brand:#0fa3b1;
-      --accent:#f0c36d;
-      --text:#1c1c1c;
-      --muted:#687280;
-      --card:#ffffff;
-      --ring:#d6e6f5;
-      --ai:#fffaf2;
-      --you:#dceaff;
+    :root {
+      --bg1: #eef0f7;
+      --bg2: #ffffff;
+      --brand: #3b82f6;
+      --text: #333;
+      --ai: #fff8e6;
+      --user: #dbeafe;
+      --shadow: rgba(0,0,0,0.05);
     }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
-    *{ box-sizing:border-box; }
-
-    html, body { height: 100%; }
-    body{
-      margin:0;
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-      color:var(--text);
-      background: linear-gradient(135deg, var(--bg1), var(--bg2));
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:24px 12px;
-    }
-
-    /* App shell */
-    .wrap{
-      width:100%;
-      max-width:780px;
-    }
-
-    .card{
-      background:var(--card);
-      border:1px solid var(--ring);
-      border-radius:16px;
-      box-shadow: 12px 30px 30px rgba(2, 18, 58, .06);
-      display:flex;
-      flex-direction:column;
-      /* key: height so inner area can scroll while input stays visible */
-      max-height: 82vh;
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: var(--bg1);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       overflow: hidden;
     }
 
-    /* Header */
-    .brand{
-      display:flex; align-items:center; gap:12px;
-      padding:14px 16px 8px 16px;
-    }
-    .logo{
-      font-size:20px; line-height:1; padding:8px; border-radius:12px;
-      background:#eef3ff; color:var(--brand);
-    }
-    .brand h1{
-      margin:0; font-size:22px; font-weight:700; letter-spacing:.2px;
-      background: linear-gradient(90deg, var(--brand), #4fc3f7);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    .tag{
-      margin:2px 16px 10px 16px; color:var(--muted); font-size:14px;
+    .card {
+      background: var(--bg2);
+      box-shadow: 0 4px 16px var(--shadow);
+      border-radius: 12px;
+      width: 100%;
+      max-width: 720px;
+      height: 90vh;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
     }
 
-    label{ font-size:13px; color:var(--muted); }
-    select, input, button{ font:inherit; }
-    select{
-      margin: 0 10px 10px 0;
-      border:1px solid var(--ring);
-      border-radius:10px;
-      padding:8px 10px;
+    .brand {
+      padding: 16px;
+      text-align: center;
+      background: var(--bg2);
+      border-bottom: 1px solid #e5e7eb;
     }
 
-    /* Chat layout  */
-    .scroll{
-      /* only this area scrolls */
-      overflow-y:auto;
-      padding: 8px 12px 12px 12px;
-      display:flex;
-      flex-direction:column;
-      gap:10px;
-      /* smooth momentum on iOS */
-      -webkit-overflow-scrolling: touch;
+    .brand h1 {
+      font-size: 22px;
+      color: var(--brand);
+      margin-bottom: 4px;
+    }
+    .tag {
+      font-size: 13px;
+      color: #666;
     }
 
-    #log { display:flex; flex-direction:column; gap:10px; }
-
-    .row{ display:flex; gap:10px; padding: 0 16px 12px 16px; }
-
-    .composer{
-      position: sticky;
-      bottom: 0;
-      background: linear-gradient(180deg, rgba(255,255,255,0), var(--card) 35%);
-      padding: 10px 16px calc(10px + env(safe-area-inset-bottom));
-      border-top:1px solid var(--ring);
+    .controls {
+      padding: 12px 16px;
+      border-bottom: 1px solid #e5e7eb;
+      background: var(--bg2);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      font-size: 14px;
     }
 
-    input#msg{
-      flex:1;
-      outline:none;
-      border:1px solid var(--ring);
-      border-radius:12px;
-      padding:11px 14px;
-      background:#fff;
+    #log {
+      flex: 1;
+      overflow-y: auto;
+      padding: 16px;
+      scroll-behavior: smooth;
+      background: #f9fafb;
     }
-    input#msg:focus{ border-color:var(--brand); box-shadow:0 0 3px rgba(7,102,238,.12); }
 
-    button{
-      background:var(--brand); color:white; cursor:pointer;
-      border:none; border-radius:12px; padding:11px 16px; font-weight:600;
-    }
-    button:disabled{ opacity:.6; cursor:not-allowed; }
-
-    /* Message bubbles */
-    .msg{
-      display:inline-block;
-      max-width:94%;
-      padding: 14px 16px;
-      border:1px solid var(--ring);
-      border-radius:16px;
-      box-shadow: 0 1px 3px rgba(0,0,0,.08);
+    .msg {
+      margin: 8px 0;
+      padding: 12px 16px;
+      border-radius: 12px;
+      max-width: 80%;
+      line-height: 1.4;
+      font-size: 15px;
       white-space: pre-wrap;
-      word-break: break-word;
-      line-height: 1.75;
-      animation: fadeIn .35s ease-in-out;
+      word-wrap: break-word;
+      box-shadow: 0 1px 2px var(--shadow);
     }
-    .msg p { margin: 0 0 12px 0; }
-    .msg p:last-child { margin-bottom: 0; }
 
-    .you { background-color: var(--you); align-self: flex-end; text-align:right; }
-    .ai  { background-color: var(--ai);  align-self: flex-start; text-align:left; }
-    .bubbleHead{ font-weight:700; color:var(--brand); }
+    .msg.you {
+      background: var(--user);
+      align-self: flex-end;
+      text-align: right;
+    }
 
-    /* Tiny “typing…” dots */
-    .dots::after{ content:""; animation: blink 1s infinite; }
-    @keyframes blink { 0%, 100% {opacity:0;} 50% {opacity:1;} }
-    @keyframes fadeIn { from{ opacity:0; transform: translateY(10px); } to{ opacity:1; transform: translateY(0); } }
+    .msg.ai {
+      background: var(--ai);
+      align-self: flex-start;
+      text-align: left;
+    }
 
-    /* Small screens */
-    @media (max-width: 640px){
-      .card{ max-height: 86vh; }
+    .row {
+      display: flex;
+      padding: 12px;
+      border-top: 1px solid #e5e7eb;
+      background: var(--bg2);
+    }
+
+    input {
+      flex: 1;
+      padding: 10px 12px;
+      font-size: 15px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      outline: none;
+    }
+
+    button {
+      background: var(--brand);
+      color: white;
+      font-weight: 600;
+      border: none;
+      border-radius: 8px;
+      padding: 10px 16px;
+      margin-left: 8px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #2563eb;
+    }
+
+    @media (max-width: 600px) {
+      .card { height: 95vh; border-radius: 0; }
     }
   </style>
 </head>
+
 <body>
-  <div class="wrap">
-    <div class="card">
-      <!-- Header -->
-      <div class="brand">
-        <div class="logo">💎</div>
-        <h1>MindCoach</h1>
-      </div>
+  <div class="card">
+    <div class="brand">
+      <h1>💎 MindCoach</h1>
       <div class="tag">You matter. You’re heard. Calm guidance in every language by LuxeMind.</div>
+    </div>
 
-      <!-- Controls -->
-      <div style="padding: 0 16px 8px 16px;">
-        <label for="langSelect" style="font-size:14px;margin-right:8px;">Language:</label>
-        <select id="langSelect" style="margin-bottom:10px;">
-          <option value="auto">Auto</option>
-          <option value="es">Español</option>
-          <option value="en">English</option>
-          <option value="both">Both</option>
-        </select>
-      </div>
+    <div class="controls">
+      <label for="langSelect">Language:</label>
+      <select id="langSelect">
+        <option value="auto">Auto</option>
+        <option value="es">Español</option>
+        <option value="en">English</option>
+        <option value="both">Both</option>
+      </select>
+    </div>
 
-      <!-- Scrollable messages -->
-      <div class="scroll" id="scroll">
-        <div id="log"></div>
-      </div>
+    <div id="log"></div>
 
-      <!-- Sticky composer -->
-      <div class="composer">
-        <div class="row">
-          <input id="msg" placeholder="Say hola / hi…" />
-          <button id="send">Send</button>
-        </div>
-      </div>
+    <div class="row">
+      <input id="msg" type="text" placeholder="Say hola / hi..." />
+      <button id="send">Send</button>
     </div>
   </div>
 
   <script>
-    // Elements
-    const scrollBox = document.getElementById('scroll');
-    const log = document.getElementById('log');
-    const input = document.getElementById('msg');
-    const btn = document.getElementById('send');
-    const langSelect = document.getElementById('langSelect');
-
-    function autoscroll() {
-      // keep last message in view
-      scrollBox.scrollTo({ top: scrollBox.scrollHeight, behavior: 'smooth' });
-    }
-
-    function toParagraphs(text) {
-      // Split on double newlines into <p> for nicer reading blocks
-      return text
-        .trim()
-        .split(/\n\s*\n/)
-        .map(p => `<p>${p}</p>`)
-        .join('');
-    }
+    const log = document.getElementById("log");
+    const input = document.getElementById("msg");
+    const btn = document.getElementById("send");
+    const langSelect = document.getElementById("langSelect");
 
     function add(role, text) {
-      const div = document.createElement('div');
-      div.className = 'msg ' + (role === 'You' ? 'you' : 'ai');
-      div.innerHTML = `<span class="bubbleHead">${role}:</span><br>${toParagraphs(text)}`;
+      const div = document.createElement("div");
+      div.className = "msg " + (role === "You" ? "you" : "ai");
+      div.innerHTML = `<strong>${role}:</strong> ${text}`;
       log.appendChild(div);
-      autoscroll();
-    }
-
-    // Typing indicator node (re-used)
-    let typingDiv = null;
-    function showTyping() {
-      if (typingDiv) return;
-      typingDiv = document.createElement('div');
-      typingDiv.className = 'msg ai';
-      typingDiv.innerHTML = `<em>MindCoach is typing<span class="dots">...</span></em>`;
-      log.appendChild(typingDiv);
-      autoscroll();
-    }
-    function hideTyping() {
-      if (!typingDiv) return;
-      typingDiv.remove();
-      typingDiv = null;
+      log.scrollTop = log.scrollHeight;
     }
 
     async function send() {
       const message = input.value.trim();
       if (!message) return;
 
-      add('You', message);
-      input.value = '';
+      add("You", message);
+      input.value = "";
       btn.disabled = true;
-      btn.textContent = 'Thinking…';
-      showTyping();
+
+      const thinking = document.createElement("div");
+      thinking.className = "msg ai";
+      thinking.textContent = "MindCoach is typing...";
+      log.appendChild(thinking);
+      log.scrollTop = log.scrollHeight;
 
       try {
-        const res = await fetch('/api/chat', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ message, langMode: langSelect.value })
+        const res = await fetch("/api/chat", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            message: message,
+            langMode: langSelect.value,
+          }),
         });
+
         const data = await res.json();
-        hideTyping();
-        add('MindCoach', data.text ?? data.error ?? 'No response.');
-      } catch (e) {
-        hideTyping();
-        add('MindCoach', 'Network error: ' + e.message);
+        thinking.remove();
+        add("MindCoach", data.text || "No response.");
+      } catch (err) {
+        thinking.remove();
+        add("MindCoach", "⚠️ Network error. Please try again.");
       } finally {
         btn.disabled = false;
-        btn.textContent = 'Send';
-        autoscroll();
       }
     }
 
-    // UX niceties
     btn.onclick = send;
-    input.addEventListener('keydown', (e) => { if (e.key === 'Enter') send(); });
-
-    // Keep input visible when keyboard opens (iOS)
-    if (window.visualViewport) {
-      window.visualViewport.addEventListener('resize', () => {
-        // Nudge scroll to bottom so the latest msg + composer are visible
-        autoscroll();
-      });
-    }
-
-    // Initial focus
-    input.focus();
+    input.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") send();
+    });
   </script>
 </body>
 </html>
