--- a/index.html
+++ b/index.html
@@ -1,118 +1,401 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MindCoach</title>
-  <style>
-    :root {
-      --bg1: #eef0f7;
-      --bg2: #ffffff;
-      --brand: #3b82f6;
-      --text: #333;
-      --ai: #fff8e6;
-      --user: #dbeafe;
-      --shadow: rgba(0,0,0,0.05);
-    }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: var(--bg1);
-      display: flex; justify-content: center; align-items: center;
-      height: 100vh; overflow: hidden;
-    }
-    .card {
-      background: var(--bg2);
-      box-shadow: 0 4px 16px var(--shadow);
-      border-radius: 12px;
-      width: 100%; max-width: 720px; height: 90vh;
-      display: flex; flex-direction: column; overflow: hidden;
-    }
-    .brand { padding: 16px; text-align: center; background: var(--bg2); border-bottom: 1px solid #e5e7eb; }
-    .brand h1 { font-size: 22px; color: var(--brand); margin-bottom: 4px; }
-    .tag { font-size: 13px; color: #666; }
-    .controls { padding: 12px 16px; border-bottom: 1px solid #e5e7eb; background: var(--bg2); display: flex; justify-content: center; align-items: center; gap: 8px; font-size: 14px; }
-    #log { flex: 1; overflow-y: auto; padding: 16px; scroll-behavior: smooth; background: #f9fafb; }
-    .msg { margin: 8px 0; padding: 12px 16px; border-radius: 12px; max-width: 80%; line-height: 1.5; font-size: 15px; white-space: pre-wrap; word-wrap: break-word; box-shadow: 0 1px 2px var(--shadow); }
-    .msg.you { background: var(--user); align-self: flex-end; text-align: right; }
-    .msg.ai { background: var(--ai); align-self: flex-start; text-align: left; }
-    .row { display: flex; padding: 12px; border-top: 1px solid #e5e7eb; background: var(--bg2); }
-    input { flex: 1; padding: 10px 12px; font-size: 15px; border-radius: 8px; border: 1px solid #ccc; outline: none; }
-    button { background: var(--brand); color: white; font-weight: 600; border: none; border-radius: 8px; padding: 10px 16px; margin-left: 8px; cursor: pointer; }
-    button:hover { background: #2563eb; }
-    @media (max-width: 600px) { .card { height: 95vh; border-radius: 0; } }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <div class="brand">
-      <h1>💎 MindCoach</h1>
-      <div class="tag">You matter. You’re heard. Calm guidance in every language by LuxeMind.</div>
-    </div>
-
-    <div class="controls">
-      <label for="langSelect">Language:</label>
-      <select id="langSelect">
-      </select>
-    </div>
-
-    <div id="log"></div>
-
-    <div class="row">
-      <input id="msg" type="text" placeholder="Say hola / hi / bonjour…" />
-      <button id="send">Send</button>
-    </div>
-  </div>
-
-  <script>
-    const log = document.getElementById("log");
-    const input = document.getElementById("msg");
-    const btn = document.getElementById("send");
-    const langSelect = document.getElementById("langSelect");
-
-    function add(role, text) {
-      const div = document.createElement("div");
-      div.className = "msg " + (role === "You" ? "you" : "ai");
-      div.innerHTML = `<strong>${role}:</strong> ${text}`;
-      log.appendChild(div);
-      div.scrollIntoView({ behavior: "smooth", block: "end" });
-    }
-
-    async function send() {
-      const message = input.value.trim();
-      if (!message) return;
-
-      add("You", message);
-      input.value = "";
-      btn.disabled = true;
-      btn.textContent = "Thinking…";
-
-      const typing = document.createElement("div");
-      typing.className = "msg ai";
-      typing.textContent = "MindCoach is typing…";
-      log.appendChild(typing);
-      typing.scrollIntoView({ behavior: "smooth", block: "end" });
-
-      try {
-        const res = await fetch("/api/chat", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ message, langMode: langSelect.value })
-        });
-        const data = await res.json();
-        typing.remove();
-        add("MindCoach", data.text ?? data.error ?? "No response.");
-      } catch (e) {
-        typing.remove();
-        add("MindCoach", "⚠️ Network error. Please try again.");
-      } finally {
-        btn.disabled = false;
-        btn.textContent = "Send";
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+    <title>MindCoach</title>
+    <style>
+      :root {
+        --bg1: #f7f7f2;
+        --bg2: #e8f3f1;
+        --brand: #0fa3b1;
+        --accent: #8ab9a3;
+        --text: #1c1c1c;
+        --muted: #6b7280;
+        --card: #ffffff;
+        --ring: #e5dcc9;
+        --ai: #fff7e6;
+        --you: #e3f0ff;
       }
-    }
 
-    btn.onclick = send;
-    input.addEventListener("keydown", (e) => { if (e.key === "Enter") send(); });
-  </script>
-</body>
+      * {
+        box-sizing: border-box;
+      }
+
+      body {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Helvetica, Arial, sans-serif;
+        color: var(--text);
+        background: radial-gradient(circle at top left, var(--bg2), var(--bg1));
+        min-height: 100vh;
+        display: flex;
+        align-items: stretch;
+        justify-content: center;
+        padding: 16px;
+      }
+
+      .wrap {
+        width: 100%;
+        max-width: 760px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .card {
+        background: var(--card);
+        border-radius: 24px;
+        box-shadow: 0 18px 40px rgba(0, 0, 0, 0.06);
+        border: 1px solid rgba(229, 220, 201, 0.9);
+        padding: 20px 20px 16px;
+        width: 100%;
+        max-height: 90vh;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .brand {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 6px;
+      }
+
+      .brand_logo {
+        width: 32px;
+        height: 32px;
+        border-radius: 999px;
+        background: linear-gradient(135deg, #d9fbff, #bde3ff);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.9);
+      }
+
+      .brand_logo span {
+        font-size: 18px;
+      }
+
+      .brand h1 {
+        margin: 0;
+        font-size: 22px;
+        letter-spacing: 0.03em;
+      }
+
+      .tag {
+        margin: 2px 0 12px;
+        font-size: 13px;
+        color: var(--muted);
+      }
+
+      .controls {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        font-size: 13px;
+        color: var(--muted);
+        margin-bottom: 8px;
+        flex-wrap: wrap;
+      }
+
+      label {
+        font-weight: 500;
+      }
+
+      select,
+      input {
+        font: inherit;
+        border-radius: 999px;
+        border: 1px solid var(--ring);
+        padding: 7px 12px;
+        outline: none;
+      }
+
+      select:focus,
+      input:focus {
+        border-color: var(--brand);
+        box-shadow: 0 0 0 2px rgba(15, 163, 177, 0.15);
+      }
+
+      #log {
+        margin-top: 10px;
+        padding: 10px 4px 12px;
+        border-radius: 16px;
+        background: linear-gradient(
+          135deg,
+          rgba(255, 255, 255, 0.9),
+          rgba(247, 247, 242, 0.95)
+        );
+        border: 1px solid rgba(234, 228, 210, 0.9);
+        flex: 1;
+        min-height: 160px;
+        max-height: 100%;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
+
+      .msg {
+        max-width: 90%;
+        padding: 10px 14px;
+        border-radius: 16px;
+        font-size: 14px;
+        line-height: 1.5;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.03);
+        animation: fadeIn 0.35s ease-out;
+        white-space: pre-wrap;
+      }
+
+      .msg.you {
+        align-self: flex-end;
+        background: var(--you);
+        border-radius: 16px 16px 4px 16px;
+      }
+
+      .msg.ai {
+        align-self: flex-start;
+        background: var(--ai);
+        border-radius: 16px 16px 16px 4px;
+      }
+
+      .msg strong {
+        font-weight: 600;
+      }
+
+      .msg.typing {
+        opacity: 0.85;
+        font-style: italic;
+        display: flex;
+        align-items: center;
+        gap: 4px;
+      }
+
+      .dots {
+        display: inline-block;
+        width: 20px;
+        text-align: left;
+      }
+
+      .dots span {
+        display: inline-block;
+        width: 4px;
+        height: 4px;
+        margin-right: 2px;
+        border-radius: 999px;
+        background: #e0b979;
+        animation: bounce 1s infinite ease-in-out;
+      }
+
+      .dots span:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+
+      .dots span:nth-child(3) {
+        animation-delay: 0.4s;
+      }
+
+      .row {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        margin-top: 10px;
+      }
+
+      .row input {
+        flex: 1;
+        border-radius: 999px;
+        padding: 10px 14px;
+        background: #fafaf6;
+      }
+
+      button {
+        border-radius: 999px;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+        font-weight: 600;
+        background: var(--brand);
+        color: #ffffff;
+        box-shadow: 0 6px 18px rgba(15, 163, 177, 0.25);
+        transition: transform 0.08s ease-out, box-shadow 0.08s ease-out;
+      }
+
+      button:hover {
+        transform: translateY(-1px);
+        box-shadow: 0 10px 22px rgba(15, 163, 177, 0.3);
+      }
+
+      button:active {
+        transform: translateY(0);
+        box-shadow: 0 4px 12px rgba(15, 163, 177, 0.2);
+      }
+
+      button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+        box-shadow: none;
+      }
+
+      @keyframes bounce {
+        0%,
+        80%,
+        100% {
+          transform: translateY(0);
+          opacity: 0.4;
+        }
+        40% {
+          transform: translateY(-3px);
+          opacity: 1;
+        }
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(4px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      @media (max-width: 768px) {
+        body {
+          padding: 10px;
+        }
+        .card {
+          padding: 16px 14px 12px;
+          border-radius: 18px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="wrap">
+      <div class="card">
+        <div class="brand">
+          <div class="brand_logo"><span>💎</span></div>
+          <h1>MindCoach</h1>
+        </div>
+        <div class="tag">
+          You matter. You’re heard. Calm guidance in every language by LuxeMind.
+        </div>
+
+        <div class="controls">
+          <label for="langSelect">Language:</label>
+          <select id="langSelect">
+            <option value="auto">Auto</option>
+            <option value="es">Español</option>
+            <option value="en">English</option>
+            <option value="fr">Français</option>
+            <option value="pt">Português</option>
+            <option value="other">Other / Mixed</option>
+          </select>
+        </div>
+
+        <div id="log"></div>
+
+        <div class="row">
+          <input
+            id="msg"
+            type="text"
+            placeholder="Say hola / hi / bonjour..."
+            autocomplete="off"
+          />
+          <button id="send">Send</button>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      const log = document.getElementById("log");
+      const input = document.getElementById("msg");
+      const btn = document.getElementById("send");
+      const langSelect = document.getElementById("langSelect");
+
+      function scrollToBottom() {
+        log.scrollTop = log.scrollHeight;
+      }
+
+      function add(role, text) {
+        const div = document.createElement("div");
+        div.className = "msg " + (role === "You" ? "you" : "ai");
+        div.innerHTML =
+          "<strong>" + role + ":</strong> " + (text || "").trim();
+        log.appendChild(div);
+        scrollToBottom();
+      }
+
+      function addTyping() {
+        const div = document.createElement("div");
+        div.className = "msg ai typing";
+        div.innerHTML =
+          "<strong>MindCoach:</strong> <span class='dots'><span></span><span></span><span></span></span>";
+        log.appendChild(div);
+        scrollToBottom();
+        return div;
+      }
+
+      async function send() {
+        const message = input.value.trim();
+        if (!message) return;
+
+        add("You", message);
+        input.value = "";
+        input.focus();
+
+        btn.disabled = true;
+        btn.textContent = "Thinking…";
+
+        const typingDiv = addTyping();
+
+        try {
+          const res = await fetch("/api/chat", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              message,
+              langMode: langSelect.value,
+            }),
+          });
+
+          const data = await res.json();
+          typingDiv.remove();
+
+          if (!res.ok) {
+            add(
+              "MindCoach",
+              data?.error || "Hmm, something went wrong. Try again in a moment."
+            );
+          } else {
+            add("MindCoach", data?.text || "(No response text)");
+          }
+        } catch (e) {
+          typingDiv.remove();
+          add(
+            "MindCoach",
+            "Network error, cariño. Please check your connection and try again."
+          );
+        } finally {
+          btn.disabled = false;
+          btn.textContent = "Send";
+          scrollToBottom();
+        }
+      }
+
+      btn.onclick = send;
+      input.addEventListener("keydown", (e) => {
+        if (e.key === "Enter" && !e.shiftKey) {
+          e.preventDefault();
+          send();
+        }
+      });
+    </script>
+  </body>
 </html>
