--- a/index.html
+++ b/index.html
@@ -1,171 +1,364 @@
-<style>
-:root {
-  --bg1: #eef6ff;
-  --bg2: #e7f7f2;
-  --bg3: #f7f2e8;
-  --card: #ffffff;
-  --brand: #4fa3d1;
-  --bubble-ai: #f7f2e8;
-  --bubble-you: #e0f2ff;
-  --text: #3f4a52;
-  --muted: #7c8a94;
-}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+    <title>MindCoach</title>
 
-/* Watercolor background using layered gradients */
-body {
-  margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Helvetica, Arial, sans-serif;
-  color: var(--text);
+    <style>
+      :root {
+        --bg1: #eef6ff;
+        --bg2: #e7f7f2;
+        --bg3: #f7f2e8;
+        --card: #ffffff;
+        --brand: #4fa3d1;
+        --bubble-ai: #f7f2e8;
+        --bubble-you: #e0f2ff;
+        --text: #3f4a52;
+        --muted: #7c8a94;
+      }
 
-  background:
-    radial-gradient(circle at 20% 20%, rgba(200,225,255,0.45), transparent 60%),
-    radial-gradient(circle at 80% 30%, rgba(210,245,230,0.4), transparent 60%),
-    radial-gradient(circle at 30% 80%, rgba(255,240,220,0.45), transparent 60%),
-    linear-gradient(135deg, var(--bg1), var(--bg2), var(--bg3));
+      /* Watercolor background */
+      body {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Helvetica, Arial, sans-serif;
+        color: var(--text);
 
-  background-size: cover;
-  background-attachment: fixed;
+        background:
+          radial-gradient(circle at 20% 20%, rgba(200,225,255,0.45), transparent 60%),
+          radial-gradient(circle at 80% 30%, rgba(210,245,230,0.4), transparent 60%),
+          radial-gradient(circle at 30% 80%, rgba(255,240,220,0.45), transparent 60%),
+          linear-gradient(135deg, var(--bg1), var(--bg2), var(--bg3));
 
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  -webkit-font-smoothing: antialiased;
-}
+        background-size: cover;
+        background-attachment: fixed;
 
-/* App container card */
-.wrap {
-  width: 100%;
-  max-width: 760px;
-  display: flex;
-  justify-content: center;
-}
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        padding: 20px;
+        -webkit-font-smoothing: antialiased;
+      }
 
-.card {
-  background: var(--card);
-  border-radius: 28px;
-  padding: 26px 24px 18px;
-  width: 100%;
-  box-shadow: 0 20px 40px rgba(0,0,0,0.1);
-  display: flex;
-  flex-direction: column;
-  animation: fadeIn 0.5s ease-out;
-}
+      .wrap {
+        width: 100%;
+        max-width: 760px;
+        display: flex;
+        justify-content: center;
+      }
 
-/* Brand style */
-.brand {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  margin-bottom: 10px;
-}
+      .card {
+        background: var(--card);
+        border-radius: 28px;
+        padding: 26px 24px 18px;
+        width: 100%;
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column;
+        animation: fadeIn 0.5s ease-out;
+      }
 
-.brand_logo {
-  width: 38px;
-  height: 38px;
-  border-radius: 999px;
-  background: linear-gradient(135deg, #d9f8ff, #bde3ff);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 0 4px rgba(0,0,0,0.1);
-}
-.brand_logo span {
-  font-size: 18px;
-}
+      /* Brand header */
+      .brand {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        margin-bottom: 10px;
+      }
 
-.brand h1 {
-  font-size: 24px;
-  margin: 0;
-  color: var(--brand);
-}
+      .brand_logo {
+        width: 38px;
+        height: 38px;
+        border-radius: 999px;
+        background: linear-gradient(135deg, #d9f8ff, #bde3ff);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+      }
 
-.tag {
-  color: var(--muted);
-  font-size: 14px;
-  margin-bottom: 16px;
-}
+      .brand_logo span {
+        font-size: 18px;
+      }
 
-/* Chat area */
-#log {
-  flex: 1;
-  margin-bottom: 16px;
-  overflow-y: auto;
-  padding-right: 4px;
-}
+      .brand h1 {
+        font-size: 24px;
+        margin: 0;
+        color: var(--brand);
+      }
 
-/* Chat bubbles */
-.msg {
-  padding: 14px 18px;
-  margin-bottom: 10px;
-  border-radius: 16px;
-  line-height: 1.45;
-  font-size: 15px;
-  white-space: pre-wrap;
-}
+      .tag {
+        color: var(--muted);
+        font-size: 14px;
+        margin-bottom: 16px;
+      }
 
-.msg.ai {
-  background: var(--bubble-ai);
-  border-left: 4px solid #dfd7c7;
-}
+      /* Language and controls */
+      .controls {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        margin-bottom: 12px;
+        flex-wrap: wrap;
+      }
 
-.msg.you {
-  background: var(--bubble-you);
-  border-right: 4px solid #b5ddff;
-  text-align: right;
-}
+      label {
+        font-weight: 500;
+        font-size: 14px;
+        color: var(--muted);
+      }
 
-/* Controls */
-.controls {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  margin-bottom: 8px;
-}
+      select,
+      input {
+        font: inherit;
+        border-radius: 999px;
+        border: 1px solid #c7d9df;
+        padding: 9px 14px;
+        outline: none;
+        font-size: 14px;
+      }
 
-select, input {
-  border-radius: 999px;
-  border: 1px solid #c7d9df;
-  padding: 9px 14px;
-  font-size: 14px;
-}
+      select:focus,
+      input:focus {
+        border-color: var(--brand);
+        box-shadow: 0 0 0 2px rgba(79, 163, 209, 0.2);
+      }
 
-/* Input + button */
-.row {
-  display: flex;
-  gap: 10px;
-}
+      /* Chat log */
+      #log {
+        flex: 1;
+        margin-bottom: 16px;
+        overflow-y: auto;
+        padding-right: 4px;
+        max-height: 60vh;
+      }
 
-.row input {
-  flex: 1;
-  background: #fafafa;
-}
+      .msg {
+        padding: 14px 18px;
+        margin-bottom: 10px;
+        border-radius: 16px;
+        line-height: 1.45;
+        font-size: 15px;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+      }
 
-button {
-  border-radius: 999px;
-  padding: 10px 20px;
-  background: var(--brand);
-  color: white;
-  font-weight: 600;
-  border: none;
-  cursor: pointer;
-  box-shadow: 0 5px 16px rgba(79,163,209,0.25);
-  transition: 0.15s ease-out;
-}
+      .msg.ai {
+        background: var(--bubble-ai);
+        border-left: 4px solid #dfd7c7;
+      }
 
-button:hover {
-  transform: translateY(-1px);
-  box-shadow: 0 8px 22px rgba(79,163,209,0.28);
-}
+      .msg.you {
+        background: var(--bubble-you);
+        border-right: 4px solid #b5ddff;
+        text-align: right;
+      }
 
-button:active {
-  transform: translateY(0);
-}
+      .msg strong {
+        font-weight: 600;
+      }
 
-/* Animations */
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(6px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-</style>
+      /* Input row */
+      .row {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-top: 6px;
+      }
+
+      .row input {
+        flex: 1;
+        background: #fafafa;
+      }
+
+      button {
+        border-radius: 999px;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+        font-weight: 600;
+        background: var(--brand);
+        color: #ffffff;
+        box-shadow: 0 5px 16px rgba(79, 163, 209, 0.25);
+        transition: transform 0.15s ease-out, box-shadow 0.15s ease-out;
+      }
+
+      button:hover {
+        transform: translateY(-1px);
+        box-shadow: 0 8px 22px rgba(79, 163, 209, 0.28);
+      }
+
+      button:active {
+        transform: translateY(0);
+        box-shadow: 0 4px 10px rgba(79, 163, 209, 0.2);
+      }
+
+      button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+        box-shadow: none;
+      }
+
+      .dots {
+        display: inline-block;
+        letter-spacing: 2px;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(6px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      @media (max-width: 768px) {
+        body {
+          padding: 10px;
+        }
+        .card {
+          padding: 18px 14px 14px;
+          border-radius: 18px;
+        }
+        .brand h1 {
+          font-size: 21px;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="wrap">
+      <div class="card">
+        <div class="brand">
+          <div class="brand_logo">
+            <span>💎</span>
+          </div>
+          <h1>MindCoach</h1>
+        </div>
+        <div class="tag">
+          You matter. You’re heard. Calm guidance in every language by LuxeMind.
+        </div>
+
+        <div class="controls">
+          <label for="langSelect">Language:</label>
+          <select id="langSelect">
+            <option value="auto">Auto</option>
+            <option value="es">Español</option>
+            <option value="en">English</option>
+            <option value="fr">Français</option>
+            <option value="pt">Português</option>
+            <option value="other">Other / Mixed</option>
+          </select>
+        </div>
+
+        <div id="log"></div>
+
+        <div class="row">
+          <input
+            id="msg"
+            type="text"
+            placeholder="Say hola / hi / bonjour..."
+            autocomplete="off"
+          />
+          <button id="send">Send</button>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      const log = document.getElementById("log");
+      const input = document.getElementById("msg");
+      const btn = document.getElementById("send");
+      const langSelect = document.getElementById("langSelect");
+
+      function scrollToBottom() {
+        log.scrollTop = log.scrollHeight;
+      }
+
+      function add(role, text) {
+        const div = document.createElement("div");
+        div.className = "msg " + (role === "You" ? "you" : "ai");
+        div.innerHTML =
+          "<strong>" + role + ":</strong> " + (text || "").trim();
+        log.appendChild(div);
+        scrollToBottom();
+        return div;
+      }
+
+      function addTyping() {
+        const div = document.createElement("div");
+        div.className = "msg ai";
+        div.innerHTML =
+          "<strong>MindCoach:</strong> <span class='dots'>…</span>";
+        log.appendChild(div);
+        scrollToBottom();
+        return div;
+      }
+
+      async function send() {
+        const message = input.value.trim();
+        if (!message) return;
+
+        add("You", message);
+        input.value = "";
+        input.focus();
+
+        btn.disabled = true;
+        btn.textContent = "Thinking…";
+
+        const typingDiv = addTyping();
+
+        try {
+          const res = await fetch("/api/chat", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              message,
+              langMode: langSelect.value,
+            }),
+          });
+
+          const data = await res.json();
+          typingDiv.remove();
+
+          if (!res.ok) {
+            add(
+              "MindCoach",
+              data.error ||
+                "Hmm, something went wrong. Please try again in a moment."
+            );
+          } else {
+            add("MindCoach", data.text || "(No response text)");
+          }
+        } catch (e) {
+          typingDiv.remove();
+          add(
+            "MindCoach",
+            "Lo siento, hubo un problema al generar la respuesta. / I’m sorry, something went wrong generating the reply."
+          );
+        } finally {
+          btn.disabled = false;
+          btn.textContent = "Send";
+          scrollToBottom();
+        }
+      }
+
+      btn.onclick = send;
+
+      input.addEventListener("keydown", (e) => {
+        if (e.key === "Enter" && !e.shiftKey) {
+          e.preventDefault();
+          send();
+        }
+      });
+    </script>
+  </body>
+</html>
